<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/startMargin"
    android:layout_marginEnd="@dimen/startMargin"
    tools:context=".CustomerFragment">



    <Spinner
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="100dp"
        android:paddingEnd="100dp"
        android:background="@color/light_blue"
        android:textAlignment="center"
        />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/firstName"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/first_name"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/surname"
        app:layout_constraintTop_toBottomOf="@id/firstName"
        app:layout_constraintStart_toStartOf="@id/firstName"
        app:layout_constraintEnd_toEndOf="@id/firstName"
        android:hint="@string/surname"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/phone_1"
        app:layout_constraintTop_toBottomOf="@id/surname"
        app:layout_constraintStart_toStartOf="@id/firstName"
        app:layout_constraintEnd_toEndOf="@id/firstName"
        android:inputType="phone"
        android:hint="@string/phone_number"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/phone_2"
        app:layout_constraintTop_toBottomOf="@id/phone_1"
        app:layout_constraintStart_toStartOf="@id/firstName"
        app:layout_constraintEnd_toEndOf="@id/firstName"
        android:inputType="phone"
        android:hint="@string/phone_number"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/phone_3"
        app:layout_constraintTop_toBottomOf="@id/phone_2"
        app:layout_constraintStart_toStartOf="@id/firstName"
        app:layout_constraintEnd_toEndOf="@id/firstName"
        android:inputType="phone"
        android:hint="@string/phone_number"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/email_1"
        app:layout_constraintTop_toBottomOf="@id/phone_3"
        app:layout_constraintStart_toStartOf="@id/firstName"
        app:layout_constraintEnd_toEndOf="@id/firstName"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email_address"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/email_2"
        app:layout_constraintTop_toBottomOf="@id/email_1"
        app:layout_constraintStart_toStartOf="@id/firstName"
        app:layout_constraintEnd_toEndOf="@id/firstName"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email_address"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/email_3"
        app:layout_constraintTop_toBottomOf="@id/email_2"
        app:layout_constraintStart_toStartOf="@id/firstName"
        app:layout_constraintEnd_toEndOf="@id/firstName"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email_address"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/address_1"
        app:layout_constraintTop_toBottomOf="@id/email_3"
        app:layout_constraintStart_toStartOf="@id/firstName"
        app:layout_constraintEnd_toEndOf="@id/firstName"
        android:hint="@string/billing_address_1"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/address_2"
        app:layout_constraintTop_toBottomOf="@id/address_1"
        app:layout_constraintStart_toStartOf="@id/firstName"
        app:layout_constraintEnd_toEndOf="@id/firstName"
        android:hint="@string/billing_address_2"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/address_3"
        app:layout_constraintTop_toBottomOf="@id/address_2"
        app:layout_constraintStart_toStartOf="@id/firstName"
        app:layout_constraintEnd_toEndOf="@id/firstName"
        android:hint="@string/billing_address_3"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/city"
        app:layout_constraintTop_toBottomOf="@id/address_3"
        app:layout_constraintStart_toStartOf="@id/firstName"
        app:layout_constraintEnd_toEndOf="@id/firstName"
        android:hint="@string/city_or_town"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/county"
        app:layout_constraintTop_toBottomOf="@id/city"
        app:layout_constraintStart_toStartOf="@id/firstName"
        app:layout_constraintEnd_toEndOf="@id/firstName"
        android:hint="@string/county"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/postcode"
        app:layout_constraintTop_toBottomOf="@id/county"
        app:layout_constraintStart_toStartOf="@id/firstName"
        app:layout_constraintEnd_toEndOf="@id/firstName"
        android:hint="@string/postcode"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/addressCopy"
        app:layout_constraintTop_toBottomOf="@id/postcode"
        app:layout_constraintStart_toStartOf="@id/firstName"
        app:layout_constraintEnd_toStartOf="@id/checkbox"
        android:text="@string/set_billing_address_as_job_address"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkbox"
        app:layout_constraintTop_toTopOf="@id/addressCopy"
        app:layout_constraintBottom_toBottomOf="@id/addressCopy"
        app:layout_constraintStart_toEndOf="@id/addressCopy"
        app:layout_constraintEnd_toEndOf="@id/firstName"
        />
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/save"
        app:layout_constraintTop_toBottomOf="@id/addressCopy"
        android:layout_marginTop="@dimen/topMargin"
        app:layout_constraintStart_toStartOf="@id/firstName"
        app:layout_constraintEnd_toEndOf="@id/firstName"
        android:text="@string/save"
        />
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/delete"
        android:layout_marginTop="@dimen/topMargin"
        app:layout_constraintTop_toBottomOf="@id/save"
        app:layout_constraintStart_toStartOf="@id/firstName"
        app:layout_constraintEnd_toEndOf="@id/firstName"
        android:text="@string/delete_customer"
        />
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/cancel"
        android:layout_marginTop="@dimen/topMargin"
        app:layout_constraintTop_toBottomOf="@id/delete"
        app:layout_constraintStart_toStartOf="@id/firstName"
        app:layout_constraintEnd_toEndOf="@id/firstName"
        android:text="@string/cancel"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/custId"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/jobAddressId"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible"
        />



</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>