<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_toolbar"
        android:background="@color/dark_blue"/>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textStart"
        android:layout_marginTop="@dimen/topMargin"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/startMargin"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="@dimen/startMargin"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:text="@string/login_or_register"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/editEmail"
        android:layout_marginTop="@dimen/topMargin"
        app:layout_constraintTop_toBottomOf="@id/textStart"
        app:layout_constraintStart_toStartOf="@id/textStart"
        app:layout_constraintEnd_toEndOf="@id/textStart"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/editPassword"
        android:layout_marginTop="@dimen/topMargin"
        app:layout_constraintTop_toBottomOf="@id/editEmail"
        app:layout_constraintStart_toStartOf="@id/textStart"
        app:layout_constraintEnd_toEndOf="@id/textStart"
        android:inputType="textPassword"
        />
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/buttonLogin"
        android:layout_marginTop="@dimen/topMargin"
        app:layout_constraintTop_toBottomOf="@id/editPassword"
        app:layout_constraintStart_toStartOf="@id/textStart"
        app:layout_constraintEnd_toEndOf="@id/textStart"
        android:textAlignment="center"
        android:text="@string/login"
        />
     <Button
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/buttonRegister"
         android:layout_marginTop="@dimen/topMargin"
         app:layout_constraintTop_toBottomOf="@id/buttonLogin"
         app:layout_constraintStart_toStartOf="@id/textStart"
         app:layout_constraintEnd_toEndOf="@id/textStart"
         android:textAlignment="center"
         android:text="@string/register"
         />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</LinearLayout>